testsuite/tests/rename/should_fail/T16116b.hs
{-# LANGUAGE TypeFamilies #-}
module T16116b where

class C a where
  type F a
instance C [a] where
  type F [a] = b
