testsuite/tests/rename/should_fail/T16116b.stderr

T16116b.hs:7:16: error: [GHC-76037] Not in scope: type variable ‘b’
